--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -41,6 +41,9 @@
 	\end{theorem}
 	\section{Funcions de variable real}
 	\subsection{Definicions}
+	\begin{definition}[Límit]
+		\labelname{límit}\label{def:límit}\
+	\end{definition}
 	\begin{definition}[Funció contínua]
 		\labelname{funció contínua}\label{def:funcio continua}\label{def:funció contínua}
 		Sigui \(f\) una funció. Direm que \(f\) és contínua en \(a\) si
