--- a/Apunts.tex
+++ b/Apunts.tex
@@ -117,6 +117,9 @@
 \newcommand{\abs}[1]{\left|#1\right|}
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}
 \newcommand{\lxor}{\veebar}
+\newcommand{\sii}{\iff}
+\newcommand{\implica}{\implies}
+\newcommand{\implicatper}{\impliedby}
 
 %\setcounter{chapter}{-1}
 
@@ -219,5 +222,7 @@
 \end{document} %WEB TO' MOLONA: http://www-history.mcs.st-and.ac.uk/BiogIndex.html
 
 % Canviar \[ per {$$ i \] per $$}, definir commanda per [x] i canviar-les totes. Potser amb paràmetres (per barra, claudators i superíndexos) Potser dues commandes per overline i claudators
+
+% \Rightarrow \implica; \Leftarrow \implicatper; \Leftrightarrow \sii
 
 %\[\mathbb{A}\mathbb{B}\mathbb{C}\mathbb{D}\mathbb{E}\mathbb{F}\mathbb{G}\mathbb{H}\mathbb{I}\mathbb{J}\mathbb{K}\mathbb{L}\mathbb{M}\mathbb{N}\mathbb{O}\mathbb{P}\mathbb{Q}\mathbb{R}\mathbb{S}\mathbb{T}\mathbb{U}\mathbb{V}\mathbb{W}\mathbb{X}\mathbb{Y}\mathbb{Z}\]
