Arreglat petit error matemàtic

--- a/parts/AM.tex
+++ b/parts/AM.tex
@@ -41,7 +41,7 @@
 			\[\lim_{N\to\infty}\frac{1-r^{N+1}}{1-r}=
 			\begin{cases}
 				\displaystyle \frac{1}{1-r} & \text{si }-1<r<1 \\
-				+\infty & \text{si }r\leq1 \\
+				+\infty & \text{si }r\geq1 \\
 				\text{no existeix} & \text{si }r\leq-1 
 			\end{cases}\]
 			i per la definició de \myref{def:sèrie convergent} trobem que \eqref{ex:sèries geomètriques:eq1} és convergent si i només si \(r\) pertany a l'interval \((-1,1)\).
